force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>Loan application. It can have three states: Approved, Referred or Rejected. Approved applications have associated Loan records.</description>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>