force-app/main/default/objects/Application__c/fields/Repayment_Period__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Period__c</fullName>
    <description>Loan repayment period, min 6 months, max 12 months.</description>
    <label>Repayment Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>