force-app/main/default/objects/Application__c/validationRules/Repayment_period.validationRule-meta.xml
<ValidationRule>
    <fullName>Repayment_period</fullName>
    <active>true</active>
    <errorConditionFormula>Repayment_Period__c&gt;12&amp;&amp;Repayment_Period__c&lt;6</errorConditionFormula>
    <errorDisplayField>Repayment_Period__c</errorDisplayField>
    <errorMessage>Repayment period must be between 6 and 12 months.</errorMessage>
</ValidationRule>