force-app/main/default/objects/Application__c/validationRules/Value_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Value__c&gt;5000&amp;&amp;Value__c&lt;1000</errorConditionFormula>
    <errorDisplayField>Value__c</errorDisplayField>
    <errorMessage>Specified loan value must be between1000 and 5000.</errorMessage>
</ValidationRule>